Test Sandbox Project/src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Agen_Pulsa__c</fullName>
        <label>Agen Pulsa</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Old</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_ATC__c</fullName>
        <label>Description (ATC)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_PDP__c</fullName>
        <label>Description (PDP)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Cashback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cashback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Free_Return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Free Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pre_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pre Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Wholesale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wholesale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nominal__c</fullName>
        <label>Nominal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <label>Product Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wholesale_price__c</fullName>
        <label>Wholesale price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>